slv2 (0.6.3) unstable; urgency=low

  * Fix illegal output of slv2_value_get_turtle_token for floats.
 
 -- Dave Robillard <dave@drobilla.net>  Fri, 12 Dec 2008 23:23:47 -0500

slv2 (0.6.2) unstable; urgency=high

  * Fix bug introduced with I18N in 0.6.1 which broke feature detection.
  * Add waf configure --no-jack option to avoid building Jack clients.
 
 -- Dave Robillard <dave@drobilla.net>  Sun, 30 Nov 2008 19:40:27 -0500

slv2 (0.6.1) unstable; urgency=low

  * I18N support.
  * Add slv2_port_get_value (analogous to slv2_plugin_get_value).
  * Add slv2_instance_get_extension_data.
  * Fix slv2_plugin_get_supported_features (previously non-functional).
 
 -- Dave Robillard <dave@drobilla.net>  Sat, 08 Nov 2008 14:27:10 -0500

slv2 (0.6.0) unstable; urgency=low

  * Rework API to reduce dependence of SLV2 on specific LV2 features
  * Use SLV2Value most everywhere in the API for type safety and
    performance reasons
  * Typical use case performance improvements
  * Add support for scale points
  * Use new Redland "trees" store for dramatic performance improvements
  * *** API BREAK ***
 
 -- Dave Robillard <dave@drobilla.net>  Sun, 06 Jul 2008 13:11:15 -0400

slv2 (0.5.0) unstable; urgency=low

  * Update LV2 UI header (API break)
  * *** API BREAK ***
 
 -- Dave Robillard <dave@drobilla.net>  Thu, 17 Jan 2008 18:34:29 -0500

slv2 (0.4.5) unstable; urgency=low

  * Fix redland librdf_free_query_results warning
  * Use "memory" store instead of "hashes" store for plugin RDF data,
    resulting in extreme speedups in some cases.
 
 -- Dave Robillard <dave@drobilla.net>  Tue, 15 Jan 2008 19:22:21 -0500

slv2 (0.4.4) unstable; urgency=low

  * Add slv2_port_has_property
  * Add slv2_plugin_has_feature
  * Add plugin template and port signature interface for much faster plugin
    discovery with port input/output/type inspection.
 
 -- Dave Robillard <dave@drobilla.net>  Tue, 15 Jan 2008 10:43:00 -0500
 
slv2 (0.4.3) unstable; urgency=low
