@@ -1,8 +1,10 @@
 slv2 (0.6.3) unstable; urgency=low
 
   * Fix illegal output of slv2_value_get_turtle_token for floats.
+  * Fix slv2_plugin_get_value_for_subject
+  * Add test suite
  
- -- Dave Robillard <dave@drobilla.net>  Fri, 12 Dec 2008 23:23:47 -0500
+ -- Dave Robillard <dave@drobilla.net>  Sat, 13 Dec 2008 14:13:43 -0500
 
 slv2 (0.6.2) unstable; urgency=high
 
